tests/ui/rfcs/rfc-2497-if-let-chains/avoid-invalid-mir.stderr
error: expected expression, found `let` statement
  --> $DIR/avoid-invalid-mir.rs:5:7
   |
LL |     ! let y = 42;
   |       ^^^

error: `let` expressions are not supported here
  --> $DIR/avoid-invalid-mir.rs:5:7
   |
LL |     ! let y = 42;
   |       ^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions

error[E0658]: `let` expressions in this position are unstable
  --> $DIR/avoid-invalid-mir.rs:5:7
   |
LL |     ! let y = 42;
   |       ^^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
